feat: format whole code and use deprecated annotation